added css rules for header & banner

--- a/index.html
+++ b/index.html
@@ -12,37 +12,33 @@
 <body class="page">
     <!-- Шапка страницы START -->
     <header class="header">
-        <div class="container header-container">
-            <a class="link logo" href="/">Mod</a>
+        <a class="link logo" href="/">Mod</a>
 
-            <nav class="nav">
-                <ul class="list nav-list">
-                    <li class="nav-list-item">
-                        <a class="link nav-list-link" href="#biography">Biography</a>
-                    </li>
-                    <li class="nav-list-item">
-                        <a class="link nav-list-link active" href="#designers">Designers</a>
-                    </li>
-                    <li class="nav-list-item">
-                        <a class="link nav-list-link" href="#testimonals">Testimonials</a>
-                    </li>
-                    <li class="nav-list-item">
-                        <a class="link nav-list-link" href="#strong">Strong points</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="nav">
+            <ul class="list nav-list">
+                <li class="nav-list-item">
+                    <a class="link nav-list-link" href="#biography">Biography</a>
+                </li>
+                <li class="nav-list-item">
+                    <a class="link nav-list-link active" href="#designers">Designers</a>
+                </li>
+                <li class="nav-list-item">
+                    <a class="link nav-list-link" href="#testimonals">Testimonials</a>
+                </li>
+                <li class="nav-list-item">
+                    <a class="link nav-list-link" href="#strong">Strong points</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <!-- Шапка страницы END -->
 
     <main class="main">
         <!-- Баннер START -->
         <section class="section banner">
-            <div class="banner-bg">
-                <div class="banner-content">
-                    <h1 class="title-lg banner-title">Mod Studio</h1>
-                    <p class="banner-text">Modern Web Studio</p>
-                </div>
+            <div class="banner-content">
+                <h1 class="title title-lg banner-title">Mod Studio</h1>
+                <p class="banner-text">Modern Web Studio</p>
             </div>
         </section>
         <!-- Баннер END -->
@@ -50,7 +46,7 @@
         <!-- Секция Биографии START -->
         <section class="section biography">
             <div class="biography-head">
-                <h2 class="bold section-title">Biography</h2>
+                <h2 class="bold title section-title">Biography</h2>
 
                 <div class="biography-photo">
                     <img class="img" src="/img/biography-photo.jpg" alt="Biography block photo">
@@ -58,7 +54,7 @@
             </div>
 
             <div class="biography-body">
-                <h3 class="title-lg biography-title">
+                <h3 class="title title-lg biography-title">
                     Katya Mills
                 </h3>
     
@@ -79,7 +75,7 @@
 
         <!-- Секция Дизайнеров START -->
         <section class="section designers">
-            <h2 class="bold section-title">Designers</h2>
+            <h2 class="bold title section-title">Designers</h2>
 
             <ul class="list designers-list">
                 <li class="designers-item">
@@ -144,7 +140,7 @@
         <!-- Секция Testimonials START -->
         <section class="section testimonials">
             <div class="testimonials-head">
-                <h2 class="bold section-title">Testimonials</h2>
+                <h2 class="bold title section-title">Testimonials</h2>
 
                 <ul class="list testimonials-contacts">
                     <li class="testimonials-contact">
@@ -180,7 +176,7 @@
 
         <!-- Секция Strong points START -->
         <section class="section strong-points">
-            <h2 class="bold section-title">Strong points</h2>
+            <h2 class="bold title section-title">Strong points</h2>
 
             <ul class="list strong-points-list">
                 <li class="strong-points-item">
@@ -190,7 +186,7 @@
                     <img class="img" src="/img/testimonials/testimonials2.jpg" alt="">
                 </li>
                 <li class="strong-points-item strong-points-item-lg">
-                    <h3 class="title-lg">Strengths</h3>
+                    <h3 class="title title-lg">Strengths</h3>
                     <ul class="list regular strengths">
                         <li class="strengths-item">Interiors</li>
                         <li class="strengths-item">Outdoors</li>
