added strong points section

--- a/index.html
+++ b/index.html
@@ -135,6 +135,34 @@
                         </dl>
                     </article>
                 </li>
+
+                <li class="designers-item">
+                    <article class="bold person">
+                        <div class="person-photo">
+                            <img class="img" src="/img/designers/designer-kameron.jpg" alt="Designer Jess Wonder photo">
+                        </div>
+        
+                        <dl class="person-info">
+                            <dt class="person-name">Kameron Clein</dt>
+                            <dd class="person-text">From/ <span class="regular">Be more flower</span></dd>
+                            <dd class="person-skills">Skills/ <span class="regular">Design Strategy / Marketing</span></dd>
+                        </dl>
+                    </article>
+                </li>
+
+                <li class="designers-item">
+                    <article class="bold person">
+                        <div class="person-photo">
+                            <img class="img" src="/img/designers/designer-kameron.jpg" alt="Designer Jess Wonder photo">
+                        </div>
+        
+                        <dl class="person-info">
+                            <dt class="person-name">Kameron Clein</dt>
+                            <dd class="person-text">From/ <span class="regular">Be more flower</span></dd>
+                            <dd class="person-skills">Skills/ <span class="regular">Design Strategy / Marketing</span></dd>
+                        </dl>
+                    </article>
+                </li>
             </ul>
         </section>
         <!-- Секция Дизайнеров END -->
@@ -180,10 +208,10 @@
 
             <ul class="list strong-points-list">
                 <li class="strong-points-item">
-                    <img class="img" src="/img/testimonials/testimonials1.jpg" alt="">
+                    <img class="img" src="/img/strong-points/strong-points1.jpg" alt="">
                 </li>
                 <li class="strong-points-item">
-                    <img class="img" src="/img/testimonials/testimonials2.jpg" alt="">
+                    <img class="img" src="/img/strong-points/strong-points2.jpg" alt="">
                 </li>
                 <li class="strong-points-item strong-points-item-lg">
                     <h3 class="title title-lg">Strengths</h3>
@@ -201,7 +229,13 @@
                     </ul>
                 </li>
                 <li class="strong-points-item">
-                    <img class="img" src="/img/testimonials/testimonials3.jpg" alt="">
+                    <img class="img" src="/img/strong-points/strong-points3.jpg" alt="">
+                </li>
+                <li class="strong-points-item">
+                    <img class="img" src="/img/strong-points/strong-points3.jpg" alt="">
+                </li>
+                <li class="strong-points-item">
+                    <img class="img" src="/img/strong-points/strong-points3.jpg" alt="">
                 </li>
             </ul>
         </section>
