added mobile version(final)

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <a class="link regular footer-link" href="mailto:info@modstudio.com">info@modstudio.com</a>
         </address>
 
-        <div class="column">
+        <div class="column footer-product">
             <a class="link footer-text" href="/">
                 A product of <span class="footer-logo">MOD</span>
             </a>
