--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
     <!-- Modal START -->
     <div class="modal">
         <dialog 
-        id="modal"
-        class="modal__inner"
+            id="modal"
+            class="modal__inner"
         >
             <h3 class="modal__title title">Get in touch</h3>
 
@@ -321,7 +321,7 @@
                     <div class="form__group">
                         <label class="form__label" for="user-email">E-mail</label>
                         <div class="form__input-group">
-                            <input id="user-email" class="form__input" type="email" placeholder="name@email.com" pattern="/^\S+@\S+\.\S+$/" required>
+                            <input id="user-email" class="form__input" type="email" placeholder="name@email.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
 
                             <svg class="form__input-icon" viewBox="0 0 30 30" width="26" height="26">
                                 <use href="/icons/icons-sprite.svg#email"></use>
