added min sizes for images

--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
 
                 <ul class="strong-points__list list">
                     <li class="strong-points__list-item">
-                        <img class="image" src="./img/strong-points/strong-points1.jpg" alt="">
+                        <img class="image" src="./img/strong-points/strong-points1.jpg" alt="Картинка интерьера #1">
                     </li>
                     <li class="strong-points__list-item">
-                        <img class="image" src="./img/strong-points/strong-points2.jpg" alt="">
+                        <img class="image" src="./img/strong-points/strong-points2.jpg" alt="Картинка интерьера #2"">
                     </li>
                     <li class="strong-points__list-item strong-points__list-item_lg">
                         <h3 class="title title_lg">Strengths</h3>
@@ -259,13 +259,13 @@
                         </ul>
                     </li>
                     <li class="strong-points__list-item">
-                        <img class="image" src="./img/strong-points/strong-points3.jpg" alt="">
+                        <img class="image" src="./img/strong-points/strong-points3.jpg" alt="Картинка интерьера #3"">
                     </li>
                     <li class="strong-points__list-item">
-                        <img class="image" src="./img/strong-points/strong-points3.jpg" alt="">
+                        <img class="image" src="./img/strong-points/strong-points3.jpg" alt="Картинка интерьера #4"">
                     </li>
                     <li class="strong-points__list-item">
-                        <img class="image" src="./img/strong-points/strong-points3.jpg" alt="">
+                        <img class="image" src="./img/strong-points/strong-points3.jpg" alt="Картинка интерьера #5"">
                     </li>
                 </ul>
             </section>
@@ -315,7 +315,7 @@
                             <input class="form__input" id="user-name" type="text" name="user-name" placeholder="3+ Characters" minlength="3" autofocus required>
                         
                             <svg class="form__input-icon" viewBox="0 0 30 30" width="26" height="26">
-                                <use href="/icons/icons-sprite.svg#user"></use>
+                                <use href="./icons/icons-sprite.svg#user"></use>
                             </svg>
                         </div>
                     </div>
@@ -326,7 +326,7 @@
                             <input id="user-email" class="form__input" type="email" placeholder="name@email.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
 
                             <svg class="form__input-icon" viewBox="0 0 30 30" width="26" height="26">
-                                <use href="/icons/icons-sprite.svg#email"></use>
+                                <use href="./icons/icons-sprite.svg#email"></use>
                             </svg>
                         </div>
                     </div>
@@ -338,7 +338,7 @@
                             <textarea id="user-comment" class="form__textarea" name="user-comment" placeholder="Your comment..." spellcheck></textarea>
 
                             <svg class="form__textarea-icon" viewBox="0 0 30 30" width="26" height="26">
-                                <use href="/icons/icons-sprite.svg#message"></use>
+                                <use href="./icons/icons-sprite.svg#message"></use>
                             </svg>
                         </div>
                     </div>
