--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
         <main class="main">
             <!-- Баннер START -->
-            <section class="banner section">
-                <div class="banner__content">
-                    <h1 class="banner__content-title title title_lg">Mod Studio</h1>
-                    <p class="banner__content-text">Modern Web Studio</p>
+            <section class="hero section">
+                <div class="hero__content">
+                    <h1 class="hero__content-title title title_lg">Mod Studio</h1>
+                    <p class="hero__content-text">Modern Web Studio</p>
                 </div>
             </section>
             <!-- Баннер END -->
